<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">safeMedicare</string>
    <string name="usr_name">Username</string>
    <string name="password">Password</string>
    <string name="password2">Retype Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="logout_btn">Log Out</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Setting</string>
    <string name="family_member_btn">Family Member</string>
    <string name="patient_btn">Patient</string>
    <string name="msg_complete_form">Please fill up the form!</string>
    <string name="msg_signup_login_success">Signup Successfully</string>
    <string name="msg_signup_error">Sign up Error!</string>
    <string name="push_update">Push Update</string>
    <string name="sync">Sync</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_title">Add Notification</string>
    <string name="title">Medicine Name:</string>
    <string name="time">Time:</string>
    <string name="getmed">Time to take medicine:</string>
    <string name="show">Show The List</string>
    <string name="description">Description of the medicine!</string>
    <string name="msgcontent">
        has not been taken in 15 minutes! Please remind him/her by phone.测试短信，收到了告诉我一声
    </string>
    <string name="register_btn">Register</string>
    <string name="email_addr">Email Address</string>
    <string name="msg_password_mismatch">Both password does not match</string>
    <string name="phone_num">Caregiver Number</string>
    <string name="snooze">Snooze</string>
    <string name="drug_interaction_result_title">Drug Interaction Results:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="file_format">.txt</string>
    <string name="taken">Taken</string>
    <string name="interaction_warning">Potential for significant interaction when two medications are taken together.
        Please consult with a physician or pharmacist to access this problem.</string>
    <string name="schedule">Schedule : </string>
    <string name="Mon">M</string>
    <string name="Tue">T</string>
    <string name="Wed">W</string>
    <string name="Thu">Th</string>
    <string name="Fri">F</string>
    <string name="Sat">Sa</string>
    <string name="Sun">S</string>
    <string name="reminderTime">Reminder Time : </string>
    <string name="dosage">Dosage : </string>
    <string name="instruction">Instruction : </string>
    <string name="shape">Shape : </string>
    <string name="drug_interaction">Drug Interaction</string>
    <string name="askyourdoctor">Ask your doctor</string>
    <string name="drug_interaction_list">Interaction List</string>
    <string name="dismiss">Dismiss</string>
    <string name="interaction_delete_warning">Are you sure you want to delete this interaction?</string>
</resources>
