<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0073e6"
    android:orientation="vertical"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_2">

            <ImageButton
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#0073e6"
                android:src="@drawable/left_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        </LinearLayout>

        <EditText
            android:id="@+id/usrname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usr_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_addr"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pwd2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password2"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_btn" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
